[package]
name = "baps"
version = "0.1.0"
authors = ["Ben Weinstein-Raun <root@benwr.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
more-asserts = "0.2.1"

[lib]
name = "baps"
path = "src/lib.rs"

[[bin]]
name = "bapscli"
path = "src/bin.rs"
